poll.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll-deployment
  namespace: default
  labels:
    app: poll
    name: poll-deployment

spec:
  replicas: 2
  selector:
    matchLabels:
      app: poll
      task: poll-deployment
  template:
    metadata:
      labels:
        app: poll
        task: poll-deployment
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - poll
              topologyKey: "kubernetes.io/hostname"
      restartPolicy: Always
      containers:
        - name: redis
          image: epitechcontent/t-dop-600-poll:k8s
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 128M
