traefik.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-deployment
  namespace: kube-public
  labels:
    app: traefik
spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - traefik
              topologyKey: "kubernetes.io/hostname"
      serviceAccountName: traefik-account
      restartPolicy: Always
      containers:
        - name: traefik
          image: traefik:2.7
          args:
            - --api.insecure
            - --providers.kubernetesingress
          ports:
            - name: web
              containerPort: 80
              hostPort: 30021
            - name: dashboard
              containerPort: 8080
              hostPort: 30042
