poll.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poll-service
  namespace: default

spec:
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
  type: ClusterIP
  selector:
    app: poll
    task: poll-deployment
