traefik.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-service
  namespace: kube-public
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 8080
      name: dashboard
      targetPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: traefik-web-service
  namespace: kube-public
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: 80
